--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,14 @@
 }
 
 body {
-  margin: 0;
+  width: 550px;
+  display: block;
+  margin: 0 auto;
   font-family: Inter, sans-serif;
-  background-color: #282D35
+  background-color: #23252C;
+  border: 1px solid black;
+}
+
+.App {
+  background-color: #F5F5F5;
 }
