--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,4 +2,60 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    background-color: #f5f5f5;
+
+    background-image: url("https://www.freepnglogos.com/uploads/michael-jordan-air-logo-9.png");
+
+    background-repeat: no-repeat;
+    background-size: 30%;
+    background-position: 50% 50%;
+}
+
+.header__name {
+    margin-bottom: 0;
+    font-size: 25px;
+    line-height: 30px;
+    letter-spacing: 0em;
+}
+
+.header__job {
+    margin: 8px auto 0 auto;
+    font-weight: 700;
+    font-size: 12.8px;
+    line-height: 15px;
+    color: #F47D27;
+}
+
+.header__website {
+    margin: 8px auto 0 auto;
+
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+
+    color: #4A4E74;
+}
+
+.header__website > a {
+    text-decoration: none;
+}
+
+#header_email {
+    border: 1px solid #D1D5DB 300;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+
+    gap: 8px;
+    margin-top: 10px;
+    width: 247px;
+
+    background: #FFFFFF;
+
+    border: 1px solid #D1D5DB;
+
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+    border-radius: 6px;
 }
