--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -2,12 +2,22 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    background-color: #f5f5f5;
+
 }
 
 .main__title {
-    justify-content: flex-start;
+    margin: 10px auto 0 35px;
+    color: #2B283A;
+    font-size: 16px;
+    line-height: 150%
 }
 
 .main__text {
-    max-width: 250px;
+    max-width: 247px;
+    font-weight: 400;
+    font-size: 10.24px;
+    line-height: 150%;
+    color: #4A4E74;
 }
