cleaning up a few files

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -41,7 +41,7 @@
     text-decoration: none;
 }
 
-#header_email {
+#header_button {
     border: 1px solid #D1D5DB 300;
     display: flex;
     flex-direction: row;
